The Spring AOT step says whether the application failed to start under processing or the processor itself crashed, names the root cause, the processor invocation and the application class before the output's tail, points at aot = false or the new aot-jvm-args, and the spring-boot keys are documented